--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.2",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
